# A-vorto

./: .gitignore  .gitmodules  .readthedocs.yaml  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.serena/: project.yml
.serena/memories/A-vorto/architecture/: ligilo-teksto-resolution.md
.serena/memories/A-vorto/fixes/: bulk_add_links-missing-import.md
.serena/memories/A-vorto/issues/: 21-aldoni-duplicate-preview.md
.serena/memories/architecture/: cli-standard-proposal.md
docs/: api.md  commands.md  index.md  installation.md
docs/commands/: aldoni.md  forigi.md  import-export.md  list.md  malfari.md  modifi.md  recenzi.md  rubujo.md  serchi.md  serci.md  vidi.md
docs/features/: links.md  search.md  undo.md
docs/man/: build.sh  vorto.1  vorto.1.md
src/A_vorto/: __init__.py  _display_preview.py  _display_references.py  aldoni_cmd.py  cli.py  display_helpers.py  import_export_helpers.py  manage_helpers.py  modifi_cmd.py  modify_helpers.py  recenzi_cmd.py  recenzi_helpers.py  search_helpers.py  serci_cmd.py  service.py  utils.py  vidi_cmd.py
src/A_vorto/data/: migrate.py  migrate_from_autish.py  migration_register.py  storage.py
tests/: conftest.py  test_cli.py  test_recenzi.py  test_service.py  test_storage.py  test_utils.py
workspace/: README.md
