[project]
name = "A-vorto"
version = "0.1.0"
description = "A — personal wordbook microapp"
authors = [{name = "Ron"}]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = [
    "A-core>=0.1.0",
    "typer[rich]>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[project.entry-points."A.commands"]
vorto = "A_vorto.cli:app"

[build-system]
requires = ["poetry-core >= 2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "A-vorto"
version = "0.1.0"
description = "A — personal wordbook microapp"
authors = ["Ron"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
A-core = ">=0.1.0"
typer = {version = ">=0.12.0", extras = ["rich"]}
rich = ">=13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.0"

[tool.poetry.scripts]
A = "A.core.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]