[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "A-vorto"
version = "0.1.0"
description = "A — personal wordbook microapp"
authors = [{name = "Ron"}]
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.11"
dependencies = [
    "typer[rich]>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[project.entry-points."A.commands"]
vorto = "A_vorto.cli:app"

[project.entry-points."A.migrations"]
A-vorto = "A_vorto.data.migration_register:register"

[tool.hatch.build.targets.wheel]
packages = ["src/A_vorto"]

[tool.poetry]
name = "A-vorto"
version = "0.1.0"
description = "A — personal wordbook microapp"
authors = ["Ron"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"
A-core = { path = "../A-core" }
typer = {version = ">=0.12.0", extras = ["rich"]}
rich = ">=13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.0"

[tool.pytest.ini_options]
testpaths = ["tests"]